[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Minigames/CatchTheObject.gd" type="Script" id=1]
[ext_resource path="res://Textures/Left.png" type="Texture" id=2]
[ext_resource path="res://Textures/Right.png" type="Texture" id=3]
[ext_resource path="res://Textures/MiniGamesTextures/catchtheobject/bg.png" type="Texture" id=4]
[ext_resource path="res://Textures/Characters/Unlock/amogus.png" type="Texture" id=5]

[node name="CatchTheObject" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.003
anchor_bottom = 1.0
margin_right = -2.16003
texture = ExtResource( 4 )
expand = true

[node name="left" type="TextureButton" parent="."]
anchor_left = 0.201
anchor_top = 0.896
anchor_right = 0.201
anchor_bottom = 0.896
margin_left = -64.72
margin_top = -66.88
margin_right = 64.28
margin_bottom = 67.12
texture_normal = ExtResource( 2 )
expand = true

[node name="right" type="TextureButton" parent="."]
anchor_left = 0.799
anchor_top = 0.896
anchor_right = 0.799
anchor_bottom = 0.896
margin_left = -64.28
margin_top = -66.88
margin_right = 64.72
margin_bottom = 67.12
texture_normal = ExtResource( 3 )
expand = true

[node name="Character" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.98
anchor_right = 0.5
anchor_bottom = 0.98
margin_left = -107.5
margin_top = -517.4
margin_right = 107.5
margin_bottom = -244.4
texture = ExtResource( 5 )
expand = true

[connection signal="button_down" from="left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="left" to="." method="_on_left_button_up"]
[connection signal="mouse_entered" from="left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="left" to="." method="_on_left_mouse_exited"]
